--- a/force-app/main/default/classes/DeleteObjectCalloutMock.cls
+++ b/force-app/main/default/classes/DeleteObjectCalloutMock.cls
@@ -2,25 +2,24 @@
  * @description       : 
  * @author            : Subramani Kumarasamy
  * @group             : 
- * @last modified on  : 10-19-2023
+ * @last modified on  : 10-26-2023
  * @last modified by  : Subramani Kumarasamy
 **/
 /**
  * STEPS FOR WRITING TEST CLASS FOR REST OUTBOUND CALLOUT:
     1. Create a mock response class that implements HttpCalloutMock interface.
         a. Should have the respond method.
-        b. Set the response by calling HttpResponse class.
+        b. Set the response by calling HttpResponse class and return the response.
     2. Create a test class that has the test method and uses the Test.setMock method to specify the name of the class that implements the HttpCalloutMock interface.
+        a. Call the method that makes a callout.
     3. Verify the response using Assert Statement
  */
-@isTest
-public class GetAnimalMockCallout implements HttpCalloutMock {
+public class DeleteObjectCalloutMock implements HttpCalloutMock {
 
     public HttpResponse respond(HttpRequest request){
-
         HttpResponse response = new HttpResponse();
+        response.setStatus('OK');
         response.setStatusCode(200);
-        response.setBody('{"animals":["majestic badger","fluffy bunny","scary bear","chicken"]}');
         return response;
     }
     
